# agentChatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: configs.py  custom_hybrid_retriever.py
app/routes/: agent_routes.py  index.py  vector_store_routes.py
app/services/: agent_service.py  helper_services.py  vector_store_service.py
