[project]
name = "agent-ai-aku-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "felixLandlord",email = "felix.landlord.nunoo@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.10,<=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "langfuse (>=2.59.7,<3.0.0)",
    "langgraph (>=0.3.5,<0.4.0)",
    "langchain-google-genai (>=2.0.11,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "langchain-mongodb (>=0.5.0,<0.6.0)",
    "jq (>=1.8.0,<2.0.0)",
    "langchain-groq (>=0.2.5,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
